--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "da995923-133b-4281-8a0b-a24fe2232ea8"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
